Videos page done

--- a/videos.html
+++ b/videos.html
@@ -61,15 +61,130 @@
       <div class="video-row">
         <div class="video-col">
           <div class="feature-img">
-            <img src="images/main-video.jpeg" width="100%" />
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/qdbBWzh7EOc"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
           </div>
         </div>
         <div class="video-col">
           <div class="small-img-row">
             <div class="small-img">
-              <img src="images/small-video-1.jpg" alt="" />
+              <iframe
+                height="80px"
+                src="https://www.youtube.com/embed/W34K_Hmj9R0?controls=0"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
             </div>
-            <p>How to add multiple videos on website</p>
+            <p>
+              Blue World City Islamabad | Low-Cost Plots available | Why to
+              invest in Blue World | Detailed Video
+            </p>
+          </div>
+          <div class="small-img-row">
+            <div class="small-img">
+              <iframe
+                height="80px"
+                src="https://www.youtube.com/embed/W34K_Hmj9R0?controls=0"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <p>
+              Blue World City Islamabad | Low-Cost Plots available | Why to
+              invest in Blue World | Detailed Video
+            </p>
+          </div>
+          <div class="small-img-row">
+            <div class="small-img">
+              <iframe
+                height="80px"
+                src="https://www.youtube.com/embed/W34K_Hmj9R0?controls=0"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <p>
+              Blue World City Islamabad | Low-Cost Plots available | Why to
+              invest in Blue World | Detailed Video
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="video-row">
+        <div class="video-col">
+          <div class="feature-img">
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/qdbBWzh7EOc"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+        <div class="video-col">
+          <div class="small-img-row">
+            <div class="small-img">
+              <iframe
+                height="80px"
+                src="https://www.youtube.com/embed/W34K_Hmj9R0?controls=0"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <p>
+              Blue World City Islamabad | Low-Cost Plots available | Why to
+              invest in Blue World | Detailed Video
+            </p>
+          </div>
+          <div class="small-img-row">
+            <div class="small-img">
+              <iframe
+                height="80px"
+                src="https://www.youtube.com/embed/W34K_Hmj9R0?controls=0"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <p>
+              Blue World City Islamabad | Low-Cost Plots available | Why to
+              invest in Blue World | Detailed Video
+            </p>
+          </div>
+          <div class="small-img-row">
+            <div class="small-img">
+              <iframe
+                height="80px"
+                src="https://www.youtube.com/embed/W34K_Hmj9R0?controls=0"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <p>
+              Blue World City Islamabad | Low-Cost Plots available | Why to
+              invest in Blue World | Detailed Video
+            </p>
           </div>
         </div>
       </div>
