--- a/home.html
+++ b/home.html
@@ -81,7 +81,7 @@
           <div class="card" data-aos="zoom-in">
             <div class="overlay">
               <span>Regal Emporium</span>
-              <a href="#">Park View City Islamabad</a>
+              <a href="single-project.html">Park View City Islamabad</a>
             </div>
             <img src="images/featured-product-1.jpg" alt="" />
           </div>
