Featured post done all projects single page

--- a/home.html
+++ b/home.html
@@ -90,14 +90,16 @@
           <div class="card" data-aos="zoom-in">
             <div class="overlay">
               <span>Blue World Sports Valley</span>
-              <a href="#">Chakri Interchange Islamabad</a>
+              <a href="projects/sports-valley.html"
+                >Chakri Interchange Islamabad</a
+              >
             </div>
             <img src="images/featured-product-2.jpg" alt="" />
           </div>
           <div class="card" data-aos="zoom-in">
             <div class="overlay">
               <span>New Metro City</span>
-              <a href="#">Gujar Khan</a>
+              <a href="projects/new-metro-city.html">Gujar Khan</a>
             </div>
             <img src="images/featured-product-3.jpg" alt="" />
           </div>
