Blogs on Home page are done successfully

--- a/blogs/early-bird-balloting.html
+++ b/blogs/early-bird-balloting.html
@@ -11,7 +11,9 @@
       href="../images/favicon.png"
       type="image/x-icon"
     />
-    <title>Regal Marketing | New Metro City Gujar Khan</title>
+    <title>
+      Regal Marketing | New Metro City Gujar Khan Early Bird Balloting Blog
+    </title>
 
     <link
       rel="stylesheet"
@@ -31,7 +33,7 @@
   <body>
     <header
       style="
-        background-image: url('../images/project/new-metro-city-gujar-khan/new-metro-city-gujar-khan-cover.jpg');
+        background-image: url('../images/blog/early-bird-balloting.jpg');
         height: 600px;
       "
     >
@@ -63,58 +65,107 @@
     <div class="single-project">
       <div class="project-box">
         <div class="project project-content">
-          <h1>New Metro City Gujar Khan</h1>
-          <p>A PROJECT OF BSM DEVELOPERS</p>
+          <h1>New Metro City Gujar Khan Early Bird Balloting Blog</h1>
           <p>
-            New Metro City Gujar Khan, a society ready to set high standards in
-            the field of real estate in its pre-launch phase as New Metro City
-            Gujar Khan is a cutting-edge and leading project. It is a
-            mega-development that occupies city’s most desirable location. It is
-            a prestigious housing society with well-designed features and
-            several one-of-a-kind facilities. The project has gained huge
-            attention soon after its announcement and the trust of the investors
-            in the name of BSM Developers has attracted many of them to invest
-            in this mega commercial and residential project.
+            <a href="../projects/new-metro-city.html"
+              >New metro city Gujar Khan</a
+            >
+            Files bookings are now open at Regal Marketing and a good number of
+            files are available at our office. New Metro City Gujar Khan Early
+            Bird Balloting has been announced by BSM developers. The newly
+            launched residential society is a perception in the real estate
+            market right now and a golden investment opportunity that cannot be
+            wasted. New Metro City Gujar Khan is a state of art development
+            launched by the BSM group that is directly associated with Bahria
+            Town as the project is owned by the grandson of Malik Riaz, Malik
+            Bilal. The housing plan is a solely launched TMA-approved
+            development project, occupying a prime location adjacent to GT Road.
+            The residential development offers unique features and world-class
+            amenities developed to worldwide infrastructure principles. Regal
+            Marketing is the authorized and platinum sales partner of New Metro
+            City Gujar Khan and embraces the partnership rights to the New Metro
+            City Gujar Khan. We humbly announce that our investor’s files
+            arrived officially from the New Metro City housing society.
+          </p>
+          <h3>New Metro City Gujar Khan Land</h3>
+          <p>
+            After the success of New Metro City Kharian and Gwadar Golf City,
+            the BSM Developers have decided to deliver their real estate
+            services in Gujar Khan, which is the form of New Metro City Kharian.
+            The housing scheme is approved by the Tehsil Municipal
+            Administration (TMA) and extends over 50,000 Kanal of land.
+            Residential and commercial plots ranging from 5 Marla to 20 Marla
+            are available for possession within the housing scheme with limited
+            inventory in the market.
+          </p>
+          <h3>File Receiving Process</h3>
+          <p>The process of file retaliating is as follows:</p>
+          <ul>
+            <li>
+              Regal Marketing receives Files from the New Metro City Housing
+              society Gujar Khan.
+            </li>
+            <li>
+              After receiving, files are thoroughly filled as per the
+              credentials provided to us by our worthy customers.
+            </li>
+            <li>
+              After the file filling process, files will be sent to the Housing
+              society for receiving process.
+            </li>
+            <li>
+              After the receiving process, the file will be stamped and sent
+              back to Regal Marketing.
+            </li>
+            <li>
+              Files will be delivered to the members who have paid the down
+              payment and processing fee.
+            </li>
+            <li>
+              If you have paid your down payment and process fee, then you will
+              receive your files.
+            </li>
+          </ul>
+          <h3>New Metro City Gujar Khan A Block Early Balloting</h3>
+          <p>
+            The representatives have declared the balloting of A Block, and the
+            management of New Metro City Gujar Khan is up to launching its new
+            Block A in the coming days. Since the launch of the residential
+            society, Regal Marketing has shown its interest to keep its
+            customers updated about the latest projects and developments in New
+            Metro City Gujar Khan. Besides having economically friendly plots,
+            the location of A Block is one of the reasons for its surging fame.
+            The block is located right next to G.T Road Gujar Khan. It is
+            situated within Sector 1 of the housing scheme that is easily
+            accessible from the major routes of the city. Even before the
+            approved launch of the block, New Metro City Block A has attracted
+            the attention of a great number of investors for its lucrative
+            investment scenarios. The block offers residential plots of 5 Marla,
+            7 Marla, 10 Marla, and 1 Kanal with suitable payment plans.
           </p>
           <p>
-            <a href="https://regalmarketing.com.pk/">Regal Marketing</a>
-            believes that when it comes to finding a perfect and flawless home
-            for yourself what lies at the edge of the front door is just as
-            important as what is behind it. That’s why you can trust New Metro
-            City Gujar Khan to find you a place of privacy that not only creates
-            harmony in your life but your surroundings as well. Regal marketing
-            is authorized sales partner of this remarkable project.
+            New Metro City Gujar Khan is a recently launched residential project
+            having unique features, top-notch amenities, and a versatile range
+            of properties. The Early Birds balloting is held for Block A, which
+            is among the most luxurious Blocks of a housing scheme featuring
+            Glow Park and Miracle Gardens.
           </p>
-          <h3>Owners and Developers</h3>
           <p>
-            From the house of Mr. Malik Riaz Hussian, Mr. Bilal Malik (Grandson
-            of Mr. Malik Riaz) continues the legacy of his family by introducing
-            a housing project in Gujar Khan after successfully delivering in New
-            Metro City Kharian and Gwadar golf city in Gwadar. Being an
-            experienced developer, BSM Developers aim to provide safe investment
-            opportunity to people. Having a vast experience of real estate
-            development and success in Gwadar Golf City they are now confident
-            to give people of Gujar Khan, Rawalpindi and Islamabad, a complete
-            community which can add value to their lives and enhance their
-            living standard.
+            Regal Marketing has come up with the news of the inauguration of the
+            New Metro City Gujar Khan Block A in Sector 1. Investors from all
+            over Pakistan have been waiting eagerly for a rewarding investment
+            vision within the housing scheme, and New Metro City Gujar Khan has
+            come up with its highly profitable Block A.
           </p>
-          <h3>Past Projects by BSM Developers</h3>
           <p>
-            New Metro City is a master planned community. A complete housing
-            project with state of the art amenities, monumental master pieces
-            and all other facilities required for a complete living. After the
-            successful launch and an overwhelming response from the masses
-            towards our flagship project, Gwadar Golf City in Gwadar, New Metro
-            City will bridge the gap between conventional real estate and a
-            world beyond your imagination. Another signature project from the
-            House of BSM Developers ‘New Metro City’ is located at a historic
-            crossroad between Kharian and Sarai-Alamgir.
+            It is important to refer that the management of New Metro City Gujar
+            Khan has apparently assured to allot plots through balloting to all
+            those investors and applicants who have submitted their files before
+            19th August 2022.
           </p>
-          <h3>Location</h3>
           <p>
-            New Metro City Gujar khan holds an ideal and prime location. The
-            proximal and accessible points linked to New Metro City Gujar Khan
-            are:
+            New Metro City Gujar Khan’s location is ideal and prime. The
+            proximal and accessible points linked to NMC Gujar Khan are:
           </p>
           <ul>
             <li>Main GT Road</li>
@@ -122,122 +173,58 @@
             <li>Islamabad City</li>
             <li>Giga Mall</li>
             <li>Rawat City</li>
-            <li>T Chowk</li>
+            <li>T Chowk Rawat</li>
             <li>Mandra Toll Plaza</li>
           </ul>
-          <h3>No Object Certificate (NOC)</h3>
+          <h3>Early Bird Balloting FAQs</h3>
           <p>
-            As of the developer’s reliability, with a great portfolio, are one
-            of the most reliable developers in the real estate industry.
-            Meanwhile, all the required papers are submitted to the concerned
-            establishments however, the legal formalities are in process. New
-            Metro City Gujar Khan is going to be an NOC approved project. Tehsil
-            Municipal Authority (TMA) is looking into the submitted documents
-            and the legal policies. It is predictable that TMA will soon agree
-            to this project.
+            As the Early Bird Balloting is approaching fast and for the
+            convenience of their investors, New Metro City policies have
+            announced some Frequently Announced Questions. Following are the
+            Early Bird Balloting FAQs notified by the New Metro City Gujar Khan
+            Officials:
           </p>
-          <h3>Development Rate</h3>
+          <h4>What are the policies of Early Bird Balloting?</h4>
           <p>
-            New Metro City Gujar Khan is developing at a very fast pace. Land
-            levelling, main boulevard construction, boundary wall and other
-            construction work has begun on ground and is in full swing. After a
-            long wait, the housing society of their dreams, ‘New Metro City
-            Gujar Khan’ is close to deliver.
+            Early Bird Policy means that the customers who will file and submit
+            their documents with down payment before 19th August shall be
+            allotted plots in the A block sector.
           </p>
-          <h3>Planning of New Metro City Gujar Khan Housing Scheme</h3>
+          <h4>What are the dates of Early Bird Balloting?</h4>
           <p>
-            Underground power networks, a modern sewerage system, extensive and
-            far reaching roads, walks, gardens, fields, cemeteries, and green
-            open spaces are all samples of a well-planned housing complex.
-            Building communities with state-of-the-art development mostly
-            attract a big pool of purchasers and investors due to people’s
-            desire to live in well-planned housing society. This is why New
-            Metro City Gujar Khan is the greatest place to live and invest in
-            Rawalpindi.
+            As per the policies of the New Metro City Gujar Khan, all the
+            clients should submit their forms by 19th August 2022 to become a
+            part of Early Bird Balloting.
           </p>
-          <h3>Amenities</h3>
+          <h4>
+            Will the file holders who submitted their files before 20th August
+            2022 get a plot in Block A?
+          </h4>
           <p>
-            The society’s objective as depicted by the name is to join numerous
-            greenbelt parks and protected areas that are open to any kind of
-            solid development. The housing project’s name includes the word
-            “city,” suggesting that the scheme would have each world-class
-            luxury and provide a high level of living for its people. New Metro
-            City Gujar Khan will provide skillfully built houses with unrivaled
-            city sights, particularly along the main GT road. This luxury
-            community is one of Pakistan’s largest real estate developments, not
-            just in Punjab, but in Pakistan as well. The community is ready for
-            ownership, and the campaign is one of the most sought-after
-            residential areas in the city. The project provides world-class
-            amenities to its inhabitants, which are designed and managed by
-            highly qualified engineers, capable craftsmen, and skilled team of
-            horticulturists.
+            The customer who has submitted their files before 19th august will
+            become a part of the New Metro City Early Bird balloting for Block.
           </p>
+          <h4>Is there any confirmation fee required for the Block A plots?</h4>
           <p>
-            This newly upcoming project will be offering almost the same
-            amenities and facilities as earlier offered in New Metro City
-            Kharian. BSM developers is reintroducing a more exciting and refine
-            form of New Metro City Gujar Khan in the proximity of Gujrat
-            Territory at affordable prices. Development of this project have
-            reserved a large area for the development of this project. Most
-            probably this project would be offering Parks, refreshment spots,
-            family zones, and kids play area. Moreover, New Metro City Gujar
-            will be having a serene boundary wall under automatic security
-            system and CCTV surveillance.
+            No confirmation fee is required until the plot is officially
+            confirmed in Block A.
           </p>
-          <p>Following facilities will be available in the society:</p>
-          <ul>
-            <li>Eco-friendly projects</li>
-            <li>Eight-lane Main Boulevard</li>
-            <li>Water distillation plant</li>
-            <li>Carpeted roads & solar lights</li>
-            <li>Green areas & spaces</li>
-            <li>International education system</li>
-            <li>Healthcare facilities</li>
-            <li>Shopping malls</li>
-            <li>Indoor games</li>
-            <li>24/7 electricity supply</li>
-            <li>Modern urban utilities</li>
-            <li>Aqua Theme Park</li>
-            <li>Grand Jamia mosque</li>
-            <li>Clubhouse</li>
-            <li>Trampoline park</li>
-            <li>Community Centre</li>
-            <li>Gym area</li>
-            <li>Multiplex cinema</li>
-            <li>Smart City Features</li>
-            <li>Hospitals and Medical Malls</li>
-            <li>Fool Proof Security</li>
-            <li>Exclusive trees and green spaces</li>
-            <li>Efficient waste management system</li>
-            <li>Well-designed parks and waterfalls</li>
-            <li>Children’s playgrounds that are safe and secure</li>
-          </ul>
-          <h3>Payment Plan</h3>
-          <p>The payment plan is as follow:</p>
-          <img
-            src="../images/project/new-metro-city-gujar-khan/payment-plan.jpeg"
-            alt=""
-          />
-          <h3>Booking Requirements</h3>
+          <h4>Will the Plot Number be allocated in Block A Blotting?</h4>
           <p>
-            Regal Marketing believes in building a healthy and trustworthy
-            relationship with you lined by transparency, so we commend examining
-            about the latest documentation necessary for booking but we have
-            kept it simple for you. Documents required for making a reservation
-            for a plot are as follows:
+            The allotted files in Early Balloting Block A date on 20th August
+            2022 plot number will be announced soon after the ceremony of Early
+            Bird Balloting.
           </p>
-          <ul>
-            <li>Applicant Name</li>
-            <li>Copies of Applicant CNIC</li>
-            <li>Contact Number</li>
-            <li>Passport size picture</li>
-            <li>Nominee Name</li>
-            <li>Copies of nominee CNIC</li>
-            <li>Permanent address</li>
-            <li>
-              Down payment in the form of cash, pays order, or cross cheque
-            </li>
-          </ul>
+          <h4>
+            If a person fails if a plot is not allotted to the file holder in
+            Block A, where would he be allotted the plot?
+          </h4>
+          <p>
+            All the forms issued in the Early Balloting will be allotted plots
+            in Block of New Metro City Gujar Khan. Those who are not assigned
+            plots in Block A will be assigned plots in the other blocks of the
+            residential unit.
+          </p>
         </div>
         <div class="project project-inquiry">
           <h3>Project Inquiry</h3>
