--- a/home.html
+++ b/home.html
@@ -205,7 +205,7 @@
               <img src="images/blog-1.jpg" />
             </div>
             <div class="card-content">
-              <a href="#">
+              <a href="blogs/advantages-of-investment-in-real-estate.html">
                 <h1 data-aos="fade-up">
                   Advantages of Investment in Real Estate
                 </h1>
@@ -217,7 +217,12 @@
                 for the better future. The passive income that each investment
                 produces with the passage of time
               </p>
-              <a href="#" class="read-more" data-aos="fade-up">Read More</a>
+              <a
+                href="blogs/advantages-of-investment-in-real-estate.html"
+                class="read-more"
+                data-aos="fade-up"
+                >Read More</a
+              >
             </div>
           </div>
           <div class="card" data-aos="zoom-in">
@@ -225,7 +230,7 @@
               <img src="images/blog-2.jpg" />
             </div>
             <div class="card-content">
-              <a href="#">
+              <a href="blogs/early-bird-balloting.html">
                 <h1 data-aos="fade-up">Early Bird Balloting</h1>
               </a>
               <span data-aos="fade-up">August 29, 2022</span>
@@ -235,7 +240,12 @@
                 office. New Metro City Gujar Khan Early Bird Balloting has been
                 announced by BSM developers.
               </p>
-              <a href="#" class="read-more" data-aos="fade-up">Read More</a>
+              <a
+                href="blogs/early-bird-balloting.html"
+                class="read-more"
+                data-aos="fade-up"
+                >Read More</a
+              >
             </div>
           </div>
           <div class="card" data-aos="zoom-in">
