--- a/blogs/a-golden-investment-opportunity.html
+++ b/blogs/a-golden-investment-opportunity.html
@@ -11,7 +11,7 @@
       href="../images/favicon.png"
       type="image/x-icon"
     />
-    <title>Regal Marketing | Blue World Sports Valley</title>
+    <title>Regal Marketing | A Golden Investment Opportunity</title>
 
     <link
       rel="stylesheet"
@@ -31,7 +31,7 @@
   <body>
     <header
       style="
-        background-image: url('../images/project/sports-valley/sports-valley-cover.jpg');
+        background-image: url('../images/blog/golden-investment-opportunity.jpg');
         height: 600px;
       "
     >
